# amortized-Bayesian-workflow

./: .gitmodules  AGENTS.md  README.md  build_notebook_site.sh  environment.yml  index.html  publish_website.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/agents/: pymc-maintainer.agent.md
examples/: __init__.py  copy.ipynb  workflow_step_by_step.ipynb  workflow_step_by_step_debug.ipynb
experiments/: 01_dataset_preparation.ipynb  02_amortized_training.ipynb  03_inference_phase_ood.ipynb  04_amortized_inference.ipynb  05_inference_phase_psis.ipynb  06_chees_hmc.ipynb  check_results.ipynb  chess_hmc_initialization_comparison.ipynb  exp_utils.py  figure_amortized_init.ipynb  figure_box_plot.ipynb  run_pymc.py
experiments/config/: config.yaml  default_config.yaml  modify_config.py
experiments/results/BernoulliGLM/training_results/: neural_approximator_model(coupling).keras
experiments/results/GEV/training_results/: neural_approximator_model(coupling).keras
experiments/shell_scripts/: amortized_init_study_cheeshmc.sh  amortized_init_study_nuts.sh  compute_metrics.sh  run_notebooks.sh  slurm_pymc.sh
notebooks/: workflow_step_by_step.html  workflow_step_by_step.ipynb
sbi_mcmc/: __init__.py
sbi_mcmc/diagnostics/: __init__.py  lc2st_torch.py  nested_rhat.py
sbi_mcmc/metrics/: __init__.py  gskl.py  mmtv.py  wasserstein.py
sbi_mcmc/metrics/stats/: __init__.py  kde1d.py  kldiv_mvn.py
sbi_mcmc/tasks/: __init__.py  bernoulli_glm.py  ddm.py  gev.py  psychometric.py  tasks.py  tasks_utils.py
sbi_mcmc/tasks/info/BernoulliGLM/: design_matrix.npy  stimulus_I.npy
sbi_mcmc/tasks/info/psychometric_curve/: psychometric_data.csv
sbi_mcmc/utils/: bf_utils.py  experiment_utils.py  logging.py  plot_utils.py  psis_utils.py  tf_chees_hmc_utils.py  utils.py
src/amortized_bayesian_workflow/: __init__.py  api.py  config.py  logging_utils.py  psis.py  report.py  utils.py  workflow.py
src/amortized_bayesian_workflow/approximators/: __init__.py  base.py  bayesflow.py  bayesflow_presets.py
src/amortized_bayesian_workflow/backends/: __init__.py  base.py  blackjax_chees_hmc.py  blackjax_nuts.py  resolve.py  tfp_chees_hmc.py  utils.py
src/amortized_bayesian_workflow/diagnostics/: __init__.py  mahalanobis.py  nested_rhat.py  rhat.py
src/amortized_bayesian_workflow/tasks/: __init__.py  base.py  jax_task.py  pymc_task.py  pymc_utils.py
src/amortized_bayesian_workflow/tasks/examples/: __init__.py  gev.py  psychometric.py
src/amortized_bayesian_workflow/tasks/examples/info/psychometric_curve/: test_datasets.pkl
static/css/: index.css
tests/: __init__.py  test_backend_resolution.py  test_backend_utils.py  test_bayesflow_approximator_persistence.py  test_bayesflow_presets_imports.py  test_bernoulli_glm_task.py  test_config.py  test_examples_factories_template.py  test_experiment_utils.py  test_jax_task.py  test_logging_utils.py  test_mahalanobis_diagnostics.py  test_psychometric_task.py  test_pymc_task_utils.py  test_sbi_mcmc.py  test_task_utils.py  test_tasks_examples_imports.py  test_transform_vmap.py  test_workflow_pipeline.py
