[project]
name = "sbi_mcmc"
description = "A python project created by Cookiecutter.."
version = "0.0.0"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["argparse"]


[project.optional-dependencies]
ml = [
    "numpy<2.0.0",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "hydra-core",
    "POT",
    "seaborn",
]
test = ["pytest", "pytest-cov", "pytest-sugar"]
dev = ["ruff", "tox", "mypy", "pre-commit", "bump2version", "twine"]
extra = [
    "pymc-extras",
    "dill",
    "corner",
    "tqdm",
    "tfp-nightly[jax]",
    "arviz",
    "pymc",
    "hssm",
    "numba",
    "ONE-api",
    "ibllib",
]
notebook = ["ipykernel", "ipywidgets"]
all = ["sbi_mcmc[ml,test,dev,extra,notebook]"]
cpu = ["jax", "sbi_mcmc[all]"]
gpu = ["jax[cuda12]", "sbi_mcmc[all]"]

[build-system]
requires = ["setuptools >= 45"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
extend-exclude = ["static", ".github"]
lint.ignore = [
    "RUF001", # ruff-specific rules ambiguous-unicode-character-string
    "S101", # flake8-bandit assert
    "S308", # flake8-bandit suspicious-mark-safe-usage
    "E501", # pycodestyle line-too-long
    "F841", # pyflakes unused-variable
    "S301",
    "B007", # unused-loop-control-variable
    "UP038",
    "C416",
]
line-length = 79
lint.select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S", # flake8-bandit
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
src = ["src", "tests"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E", "F", "B007", "C408"]

[tool.coverage.run]
parallel = true
branch = true
omit = ["docs/*", "tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
show_missing = true
