[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amortized-bayesian-workflow"
version = "0.1.0"
description = "An implementation of the Amortized Bayesian Workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Project contributors" }]
dependencies = [
  "arviz-stats>=0.8.0",
  "jax>=0.4.20",
  "numpy>=1.26",
  "packaging>=23.0",
  "tqdm>=4.66",
  "scikit-learn",
  "corner",
  "dill",
]

[project.optional-dependencies]
bayesflow = ["bayesflow>=2.0.10"]
blackjax = ["blackjax>=1.2.0"]
tfp = ["tensorflow-probability[jax]>=0.24"]
pymc = ["pymc>=5.10", "pymc-extras", "arviz>=0.16"]
gpu = ["jax[cuda12]>=0.4.20; platform_system=='Linux'"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.8", "ipykernel"]
all = ["amortized-bayesian-workflow[bayesflow,blackjax,pymc,dev]"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"amortized_bayesian_workflow.tasks.examples" = [
  "info/psychometric_curve/test_datasets.pkl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
